tracker: Autospec creation for update from version 3.5.0 to version 3.5.1
Alexander Shopov (1):
      Update Bulgarian translation

Boyuan Yang (1):
      Update Chinese (China) translation

Carlos Garnacho (27):
      core: Add helper SQLite function to tokenize FTS search terms
      core: Handle FTS search terms individually
      tests: Add more FTS tests for search terms
      ci: Update stable fedora image to F37
      ci: Add targets for aarch64 rawhide
      ci: Do not consume gcovr output
      ci: Update alpine image
      ci: Pass --merge-mode-functions to gcovr
      ci: Run tests for libsoup 2.x
      tests: Pass right type/width to varargs TrackerBatch API
      ci: Update stable fedora image to F37
      ci: Add targets for aarch64 rawhide
      ci: Do not consume gcovr output
      ci: Update alpine image
      ci: Pass --merge-mode-functions to gcovr
      ci: Run tests for libsoup 2.x
      docs: Add missing image
      docs: Nudge the style of ontology class hierarchies in dark themes
      docs: Allow consecutive substitution sections
      docs: Allow adding an extra substitution path
      docs: Make flag icons themeable
      docs: Improve NIE ontology introduction
      docs: Document CLI tools in the reference documentation
      ci: Expose "Website" artifact in merge requests
      docs: Document FTS feature as a whole
      direct: Prune only content of correctly finished batches
      Release 3.5.1

Fabio Tomat (1):
      Update Friulian translation

Nathan Follens (1):
      Update Dutch translation

NEW in 3.5.1 - 2023-04-25
=========================
  * Reintroduce order/distance independent handling of
    FTS terms.
  * Documentation improvements
  * Do not prune too early content of failed batches for
    error processing purposes

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+NEW in 3.5.1 - 2023-04-25
+=========================
+  * Reintroduce order/distance independent handling of
+    FTS terms.
+  * Documentation improvements
+  * Do not prune too early content of failed batches for
+    error processing purposes
+
 NEW in 3.5.0 - 2023-03-19
 =========================
   * Documentation improvements
