tracker: Autospec creation for update from version 3.5.1 to version 3.5.2
Carlos Garnacho (6):
      core: Handle possible NULL values converting GValues to parser tokens
      build: Detect appropriate strftime() year modifier at build time
      core: Avoid possible buffer overruns
      remote: Fix possible double free
      bus: Plug leak
      Release 3.5.2

Jeremy Bicha (1):
      docs: Switch shebang to bash since popd and pushd are bashisms

NEW in 3.5.2 - 2023-05-12
=========================
  * Fix several possible crashers
  * Fix bashisms in doc generation scripts
  * Fix ISO8601 date strings in cursors on Darwin
  * Plug leak

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 3.5.2 - 2023-05-12
+=========================
+  * Fix several possible crashers
+  * Fix bashisms in doc generation scripts
+  * Fix ISO8601 date strings in cursors on Darwin
+  * Plug leak
+
 NEW in 3.5.1 - 2023-04-25
 =========================
   * Reintroduce order/distance independent handling of
