tracker: Autospec creation for update from version 3.5.2 to version 3.5.3
Brahmajit Das (1):
      build: Define _GNU_SOURCE for gmtime_r

Carlos Garnacho (4):
      core: Define _TIME_BITS=64 to ensure 64-bit time in 32-bit platforms
      libtracker-sparql: Do not consider "datatype" mandatory in JSON cursors
      libtracker-sparql: Plug leak
      Release 3.5.3

Rafael Fontenelle (1):
      Update Brazilian Portuguese translation

NEW in 3.5.3 - 2023-05-31
=========================
  * Build fixes around strftime() bug workarounds
    on some architectures/platforms.
  * Improved compatibility of JSON cursor readers
  * Leaks plugged

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 3.5.3 - 2023-05-31
+=========================
+  * Build fixes around strftime() bug workarounds
+    on some architectures/platforms.
+  * Improved compatibility of JSON cursor readers
+  * Leaks plugged
+
 NEW in 3.5.2 - 2023-05-12
 =========================
   * Fix several possible crashers
