tracker: Autospec creation for update from version 3.5.3 to version 3.6.0
Brahmajit Das (1):
      build: Define _GNU_SOURCE for gmtime_r

Bruce Cowan (1):
      Update British English translation

Calvin Walton (1):
      build: Fix handling of datadir, etc. as absolute paths

Carlos Garnacho (61):
      libtracker-sparql: Improve threading guarantees of TrackerNotifier
      libtracker-sparql: Check cancellable more often in TrackerNotifier
      libtracker-sparql: Pass TrackerNotifier explicitly when flushing events
      libtracker-sparql: Pass cancellable through notifier event cache struct
      libtracker-sparql: Pass service through TrackerNotifier event cache struct
      libtracker-sparql: Keep statement in cache event struct
      libtracker-sparql: Take TrackerNotifier weak ref when emitting events
      core: Define _TIME_BITS=64 to ensure 64-bit time in 32-bit platforms
      libtracker-sparql: Do not consider "datatype" mandatory in JSON cursors
      libtracker-sparql: Plug leak
      libtracker-common: Plug leak
      Revert "build: Avoid meson.build_root()"
      Release 3.6.alpha
      build: Use meson.global_build_root() instead of meson.build_root()
      build: Drop libexecdir from generated .pc file
      tests: Be more careful about popping/destroying thread-default main contexts
      libtracker-sparql/bus: Do not leak main contexts
      tests: Adapt FTS snippet tests to run before/after SQLite 3.42.0
      tests: Make FTS tests a bit more generic
      core: Pass TrackerOntologies when creating FTS tables
      core: Use Okapi BM25 for FTS ranking
      core: Drop the tracker_rank() FTS function
      core: Stop paying attention to stop words
      core: Bump database version
      libtracker-sparql: Document FTS_ENABLE_STOP_WORDS as deprecated
      libtracker-common: Drop TrackerLanguage enable-stemmer API
      libtracker-common: Drop TrackerLanguage stop words getter
      libtracker-common: Make TrackerLanguage language construct-only

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,42 @@
-NEW in 3.5.3 - 2023-05-31
+NEW in 3.6.0 - 2023-09-16
 =========================
+Translations: eo
+
+  Highlighted changes since 3.5.0:
+  - Use BM25 as ranking algorithm
+  - Better and more cohesive documentation
+  - Add tracker_batch_add_rdf() API call to insert RDF data
+    as part of an update batch.
+
+NEW in 3.6.rc - 2023-09-05
+==========================
+  * Documentation updates
+
+Translations: fa, tr
+
+NEW in 3.6.beta - 2023-08-11
+============================
+  * Use BM25 as FTS ranking algorithm
+  * Add tracker_batch_add_rdf() call to add RDF as
+    a batch operation.
+  * Fix warnings with newer glib
+  * Adapt tests to SQLite >= 3.42
+  * Build improvements
+
+Translations: ro
+
+NEW in 3.6.alpha - 2023-07-04
+=============================
+  * Improved threading guarantees of TrackerNotifier signal
+    callbacks.
+  * Add tracker-await-file tool to trackertestutils
+  * A number of build system fixes
   * Build fixes around strftime() bug workarounds
     on some architectures/platforms.
   * Improved compatibility of JSON cursor readers
   * Leaks plugged
+
+Translations: en_GB, it, pt_BR, sk
 
 NEW in 3.5.2 - 2023-05-12
 =========================
