--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,64 @@
+NEW in 3.7.0 - 2024-03-16
+=========================
+  * Handle POST requests in HTTP endpoints
+  * Fix a number of Coverity and static scan reports
+  * Drop deprecated SQLite API
+  * Test improvements
+
+Translations: da, de, fr, it, lv
+
+  Highlighted changes since 3.6.0:
+  * New TrackerEndpoint access control API
+  * New API to map language tagged strings to rdf:langString
+  * Better handling of corrupted databases
+  * Many HTTP endpoint improvements
+  * Better performance
+  * Improved test coverage
+
+NEW in 3.7.rc - 2024-03-04
+==========================
+  * Improve database integrity checks so they don't necessarily
+    happen after unclean exit, and so there are greater guarantees to
+    repair the damage.
+  * Handle HTTPS in SERVICE syntax
+  * Fixes for 32-bit platforms
+  * Fixes to bash completion
+
+Translations: cs, en_GB, es, eu, fa, gl, he, hu, id, ka, ko, lt,
+  lv, nl, pl, ru, sl, sv, tr, zh_CN
+
+NEW in 3.7.beta - 2024-02-12
+============================
+  * Add Avahi support to the TrackerEndpointHttp API object. This only
+    announces endpoints explicitly exposed (i.e. via code) through an HTTP
+    port and does not happen out of the box. The only currently existing
+    user of this API is the `tracker3 endpoint --http-port` CLI subcommand.
+  * There is now an --arg argument in `tracker3 sparql` subcommand
+    to assign values to parameters in queries.
+  * CLI subcommands are now split into their own executables
+  * Improvements in SPARQL handling
+  * Code cleanups and refactors
+  * Build/CI improvements
+
+Translations: uk
+
+NEW in 3.7.alpha - 2024-01-08
+=============================
+  * New TrackerEndpoint access control API
+  * New API to map language tagged strings to rdf:langString
+  * Embed Nepomuk ontology as a GResource
+  * Allow using TrackerEndpoint on private D-Bus connections
+  * Cache SPARQL statements in D-Bus endpoints
+  * Reduce heap memory usage in large transactions over D-Bus
+    endpoints
+  * Make internals future proof wrt handling of string literals
+    in SQLite
+  * Threading improvements for direct connection SELECT queries
+  * Performance improvements
+  * CI, build and test improvements
+
+Translations: el, eo, fa, ka
+
 NEW in 3.6.0 - 2023-09-16
 =========================
 Translations: eo
