tracker: Autospec creation for update from version 3.7.0 to version 3.7.1
Carlos Garnacho (27):
      tests: Test input/output of datetimes with subsecond(+timezone) info
      libtracker-common: Do not implement get_property in TrackerLanguage
      tests: Test SERVICE queries on invalid/inaccessible names
      tests: Test fn:string-join more thoroughly
      tests: Test fn:string-join with no arguments
      core: Add macro for handling SQLite function return values
      core: Handle more SQLite function error conditions as precondition checks
      core: Avoid unnecessary check
      core: Do not let the context implicitly unset in some SQLite functions
      tests: Extend tracker:uri-is-parent tests
      tests: Extend tracker:uri-is-descendant tests
      core: Remove dead code
      tests: Extend and rename tracker: namespace string functions
      tests: Extend builtin SPARQL function tests
      tests: Extend datetime builtin function tests
      tests: Extend regex() tests
      core: Remove dead code
      core: Remove dead code
      core: Remove dead code
      tests: Extend langstring tests
      core: Refactor TrackerSparqlCursor::n-column property getter
      tests: Test TrackerSparqlCursor property getters
      libtracker-sparql: Document handling of corrupted databases
      ci: Build gi-docgen as a submodule
      direct: Plug leak
      bus: Write SPARQL queries asynchronously
      Release 3.7.1

NEW in 3.7.1 - 2024-03-27
=========================
  * Fix possible stalls in D-Bus endpoint batch updates
  * Better API documentation around handling of corrupted
    databases
  * Test improvements

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 3.7.1 - 2024-03-27
+=========================
+  * Fix possible stalls in D-Bus endpoint batch updates
+  * Better API documentation around handling of corrupted
+    databases
+  * Test improvements
+
 NEW in 3.7.0 - 2024-03-16
 =========================
   * Handle POST requests in HTTP endpoints
