tracker: Autospec creation for update from version 3.7.1 to version 3.7.2
Carlos Garnacho (6):
      core: Handle the update buffer growing beyond the expected limits
      core: Add mechanism to freeze flush
      core: Avoid flushing updates within delete+insert+where queries
      tests: Add test ensuring that DELETE WHERE does not alter the iterated cursor
      core: Fix incompatibility introduced by SQLite 3.45.3
      Release 3.7.2

Fabio Tomat (3):
      Update Friulian translation
      Update Friulian translation
      Update Friulian translation

Jordi Mas i Hernandez (1):
      Update Catalan translation

Juliano de Souza Camargo (1):
      Update Brazilian Portuguese translation

Rachida SACI (1):
      Add Kabyle translation

NEW in 3.7.2 - 2024-04-24
=========================
  * Fix runtime issue introduced by SQLite 3.45.3
  * Fix possible inconsistency in the handling of DELETE WHERE queries.

Translations: ca, fur, kab, pt_BR

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+NEW in 3.7.2 - 2024-04-24
+=========================
+  * Fix runtime issue introduced by SQLite 3.45.3
+  * Fix possible inconsistency in the handling of DELETE WHERE queries.
+
+Translations: ca, fur, kab, pt_BR
+
 NEW in 3.7.1 - 2024-03-27
 =========================
   * Fix possible stalls in D-Bus endpoint batch updates
