tracker: Autospec creation for update from version 3.7.3 to version 3.8.0
Aefgh Threenine (1):
      Update Thai translation

Alexander Shopov (1):
      Update Bulgarian translation

Alyssa Ross (2):
      build: Make libdl optional
      examples: Check introspection is enabled for python

Anders Jonsson (1):
      Update Swedish translation

Andika Triwidada (1):
      Update Indonesian translation

Artur S0 (3):
      Update Russian translation
      Update Russian translation
      Update Russian translation

Asier Sarasua Garmendia (2):
      Update Basque translation
      Update Basque translation

Ask Hjorth Larsen (1):
      Update Danish translation

Aurimas Černius (2):
      Update Lithuanian translation
      Update Lithuanian translation

Balázs Úr (2):
      Update Hungarian translation
      Update Hungarian translation

Bruce Cowan (1):
      Update British English translation

Carlos Garnacho (264):
      libtracker-common: Use "once" pragma in headers
      docs: Use "once" pragma in headers
      tests: Use "once" pragma in headers
      cli: Use "once" pragma in headers
      portal: Use "once" pragma in headers
      libtracker-sparql: Use "once" pragma in headers
      build: Install tinysparql-3.0.pc file along with tracker-sparql-3.0
      build: Install Tsparql-3.0 GIR file along with Tracker-3.0
      build: Install tinysparql-3.0 VAPI file along with tracker-sparql-3.0
      cli: Rename install location for internal desktop files
      build: Rename install location for internal libraries
      docs: Rename docs namespace
      docs: Shed namespace in gi-docgen references
      docs: Change textual references to Tracker in docs
      cli: Rename CLI executable(s)
      build: Rename headers install location and main header file
      build: Rename .so library file name
      docs: Update examples to use new includes/imports/namespaces
      build: Rename portal executable and systemd service
      docs: Rename man pages
      build: Chan

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,81 @@
+NEW in 3.8.0 - 2024-09-16
+=========================
+
+Translation updates:
+  * Basque
+  * Belarusian
+  * Brazilian Portuguese
+  * British English
+  * Bulgarian
+  * Chinese (China)
+  * Czech
+  * Danish
+  * Galician
+  * Georgian
+  * German
+  * Hebrew
+  * Hungarian
+  * Indonesian
+  * Lithuanian
+  * Persian
+  * Polish
+  * Portuguese
+  * Russian
+  * Slovak
+  * Slovenian
+  * Spanish
+  * Swedish
+  * Turkish
+  * Ukrainian
+
+NEW in 3.8.rc - 2024-09-01
+==========================
+  * UI/UX improvements to the web IDE
+  * Turned the web IDE into a "tinysparql webide" CLI command
+  * Separate HTTP code to an internal static library
+  * Handle chunked encoding in HTTP responses
+  * Added a new "tinysparql introspect" subcommand to introspect
+    ontology and data structure details from SPARQL endpoints
+  * Renamed the "tinysparql sparql" subcommand into "tinysparql query",
+    and substantially clean up its options (many of them moved to the
+    "introspect" subcommand)
+  * Provide RDF namespaces at a minimum on empty JSON-LD data
+  * Memory leak fixes
+  * Fixes to issues reported by Coverity
+  * Clean up traces of GVDB
+  * Improved test coverage, above 90% now
+  * Handle TINYSPARQL_DEBUG environment variable for debugging
+
+Translations: be, ca, cs, el, eu, fa, he, hu, ka, ko, lt, pt,
+  pt_BR, ro, ru, th, tr, uk, zh_CN
+
+NEW in 3.8.beta - 2024-08-09
+============================
+  * New frontend code for web IDE, featuring error highlighting
+    and other improvements.
+  * Allow reading ontology files in all supported formats
+    besides Turtle (Trig, JSON-LD)
+  * Made the default graph have a nrl:DefaultGraph name
+  * Command line was reunited into a single executable
+  * Code consistence improvements and other cleanups
+  * Added debugging for HTTP responses
+  * Build warning fixes
+  * Testing improvements
+
+Translations: he, hi, ru, sl, zh_TW
+
+NEW in 3.8.alpha - 2024-07-04
+=============================
+  * Rename project to TinySPARQL
+  * Incipient implementation of a web-based IDE
+  * Drop libsoup2 support
+  * Improved database creation and schema updates
+  * Fix possible missed updates on INSERT OR REPLACE syntax
+  * Fix build with `-Dman=false`
+  * Use "#pragma once" in headers
+  * Check introspection for python examples
+  * Use meson summary()
+
 NEW in 3.7.3 - 2024-05-02
 =========================
   * Bump database version to fix SQLite 3.45.3 issues in existing
